# parallels

./: README.md
task1/: CMakeLists.txt  Makefile  main.cpp
task2/: plots.ipynb
task2/part1/: Makefile  main.c  matrix_vector_product
task2/part2/: Makefile  integration  main.c
task2/part3/1/: Makefile  parallel.cpp  parallel_for.cpp  serial.cpp
task2/part3/2/: Makefile  parallel.cpp  parallel_for.cpp
task2/part3/3/: Makefile  parallel_for  parallel_for.cpp
